force-app/main/default/objects/MI__c/MI__c.object-meta.xml
<CustomObject>
    <label>MI</label>
    <nameField>
        <label>MI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>