force-app/main/default/objects/MI__c/fields/Marketplace_for_EUR_FX__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_for_EUR_FX__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Marketplace for EUR FX</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Marketplace__c.Currency__c</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marketplace__c</referenceTo>
    <relationshipLabel>MI</relationshipLabel>
    <relationshipName>MI</relationshipName>
    <type>Lookup</type>
</CustomField>