force-app/main/default/objects/MI__c/fields/Marketplace_for_HKD_FX__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_for_HKD_FX__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Marketplace for HKD FX</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Marketplace__c.Currency__c</field>
            <operation>equals</operation>
            <value>HKD</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marketplace__c</referenceTo>
    <relationshipLabel>MI (Marketplace for HKD FX)</relationshipLabel>
    <relationshipName>MI2</relationshipName>
    <type>Lookup</type>
</CustomField>